# mkdocs-atom-plugin

./: .gitignore  LISENCE  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg
src/mkdocs_atom_plugin/: feed.py  plugin.py  util.py
src/mkdocs_atom_plugin/templates/: atom.xml.jinja2
tests/: test_basic.py  test_multiple_authors.py  test_multiple_categories.py  test_not_listed_in_nav.py
tests/fixtures/basic/: mkdocs.yml
tests/fixtures/basic/docs/: index.md
tests/fixtures/multiple_authors/: mkdocs.yml
tests/fixtures/multiple_authors/docs/: index.md
tests/fixtures/multiple_categories/: mkdocs.yml
tests/fixtures/multiple_categories/docs/: index.md
tests/fixtures/not_listed_in_nav/: mkdocs.yml
tests/fixtures/not_listed_in_nav/docs/: about.md  index.md
