[metadata]
name = mkdocs-atom-plugin
version = 0.0.1
description = atom feeed generator for MkDocs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maedadev/mkdocs-atom-plugin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.6, < 4

[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
  atom = mkdocs_atom_plugin.plugin:AtomPlugin
